--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                     <p>Kaufen Sie jetzt Nuubu Detox Fußpflaster und erhalten Sie 70% Rabatt auf den Originalpreis.</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="../audetox/click" class="buy-button" style="text-align: center; width: 100%; box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;">HIER KLICKEN, UM JETZT ZU SPAREN <i class="fa fa-arrow-right"></i></a>
+                    <a href="../de/click" class="buy-button" style="text-align: center; width: 100%; box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;">HIER KLICKEN, UM JETZT ZU SPAREN <i class="fa fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
@@ -551,7 +551,7 @@
           <h1>9.8</h1>
           <h2>Ausgezeichnet</h2>
           <small class="text-muted">Benutzerbewertungen (13,327)</small>
-          <a style="text-decoration: none; width: 100%; position: relative;" href="../audetox/click"> <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;"> SEITE BESUCHEN<i class="fa fa-arrow-right"></i> <span class="discount-tooltip"> 70% Rabatt </span> </button> </a>
+          <a style="text-decoration: none; width: 100%; position: relative;" href="../de/click"> <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;"> SEITE BESUCHEN<i class="fa fa-arrow-right"></i> <span class="discount-tooltip"> 70% Rabatt </span> </button> </a>
           
           </div>
           </div>
@@ -590,7 +590,7 @@
           <h1>9.5</h1>
           <h2>Sehr gut</h2>
           <small class="text-muted">Benutzerbewertungen (8,765)</small>
-          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../audetox/click/2'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
+          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../de/click/2'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
           </div>
           </div>
           <div class="product-item">
@@ -624,7 +624,7 @@
           <h1>8.5</h1>
           <h2>Gut</h2>
           <small class="text-muted">Benutzerbewertungen (5,432)</small>
-          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../audetox/click/3'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
+          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../de/click/3'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
           </div>
           </div>
           <div class="product-item">
@@ -658,7 +658,7 @@
           <h1>7.8</h1>
           <h2>Durchschnittlich</h2>
           <small class="text-muted">Benutzerbewertungen (4,321)</small>
-          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../audetox/click/4'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
+          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../de/click/4'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
           </div>
           </div>
           <div class="product-item">
@@ -690,7 +690,7 @@
           <h1>7.1</h1>
           <h2>Durchschnittlich</h2>
           <small class="text-muted">Benutzerbewertungen (3,210)</small>
-          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../audetox/click/5'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
+          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../de/click/5'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
           </div>
           </div>
           <!-- 产品1重复引导 -->
@@ -732,7 +732,7 @@
           <h1>9.8</h1>
           <h2>Ausgezeichnet</h2>
           <small class="text-muted">Benutzerbewertungen (13,327)</small>
-          <a style="text-decoration: none; width: 100%; position: relative;" href="../audetox/click"> <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;"> SEITE BESUCHEN <i class="fa fa-arrow-right"></i> <span class="discount-tooltip"> 70% Rabatt </span><span class="discount-tooltip"> 70% Rabatt </span></button> </a></div>
+          <a style="text-decoration: none; width: 100%; position: relative;" href="../de/click"> <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;"> SEITE BESUCHEN <i class="fa fa-arrow-right"></i> <span class="discount-tooltip"> 70% Rabatt </span><span class="discount-tooltip"> 70% Rabatt </span></button> </a></div>
           </div>
           <!-- 最好的标记 -->
           <div class="best-label"><img src="style/limited-offer-smaller.png" alt="Best" /></div>
@@ -768,7 +768,7 @@
           <li><span class="checkmark">✅</span> 30 Tage Geld-zurück-Garantie</li>
           <li><span class="checkmark" style="color: red;">❌</span> Hohe Nachfrage – oft schnell ausverkauft</li>
           </ul>
-          <a style="text-decoration: none; width: 100%; position: relative;" href="../audetox/click"> <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;"> SEITE BESUCHEN<i class="fa fa-arrow-right"></i><span class="discount-tooltip"> 70% Rabatt </span></button> </a>
+          <a style="text-decoration: none; width: 100%; position: relative;" href="../de/click"> <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;"> SEITE BESUCHEN<i class="fa fa-arrow-right"></i><span class="discount-tooltip"> 70% Rabatt </span></button> </a>
           <div class="best-label"><img src="style/limited-offer-smaller.png" alt="Best" /></div>
           </div>
           <div class="product-item mobile-layout">
@@ -799,7 +799,7 @@
           <li><span class="checkmark">✅</span> Toxine sind durch Farbveränderung sichtbar</li>
           <li><span class="checkmark" style="color: red;">❌</span> Hohe Nachfrage – oft schnell ausverkauft</li>
           </ul>
-          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../audetox/click/2'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
+          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../de/click/2'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
           <div class="product-item mobile-layout">
           <div class="ranking-number">#3</div>
           <h3>Kinoki Detox Fußpflaster</h3>
@@ -827,7 +827,7 @@
           <li><span class="checkmark" style="color: red;">❌</span> Wirksamkeit variiert von Person zu Person</li>
           <li><span class="checkmark" style="color: red;">❌</span> Kann bei empfindlicher Haut leicht Reizungen verursachen</li>
           </ul>
-          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../audetox/click/3'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
+          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../de/click/3'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
           <div class="product-item mobile-layout">
           <div class="ranking-number">#4</div>
           <h3>Dr. Entre's Fußpflaster</h3>
@@ -855,7 +855,7 @@
           <li><span class="checkmark" style="color: red;">❌</span> Kann etwas unordentlich durch klebrigen Rückstand werden</li>
           <li><span class="checkmark" style="color: red;">❌</span> Chemischer Geruch</li>
           </ul>
-          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../audetox/click/4'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
+          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../de/click/4'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
           <div class="product-item mobile-layout">
           <div class="ranking-number">#5</div>
           <h3>Xitox Fußpflaster</h3>
@@ -881,7 +881,7 @@
           <li><span class="checkmark" style="color: red;">❌</span> Leichte Hautreizung</li>
           <li><span class="checkmark" style="color: red;">❌</span> Teuerstes Produkt</li>
           </ul>
-          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../audetox/click/5'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
+          <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../de/click/5'">SEITE BESUCHEN<i class="fa fa-arrow-right"></i></button></div>
           </div>
           <!-- 产品1重复引导 -->
           <div class="product-best mobile-layout">Bester Gesamtsieger</div>
@@ -914,7 +914,7 @@
           <li><span class="checkmark">✅</span> 30 Tage Geld-zurück-Garantie</li>
           <li><span class="checkmark" style="color: red;">❌</span> Hohe Nachfrage – oft schnell ausverkauft</li>
           </ul>
-          <a style="text-decoration: none; width: 100%; position: relative;" href="../audetox/click"> <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;"> SEITE BESUCHEN<i class="fa fa-arrow-right"></i><span class="discount-tooltip"> 70% Rabatt </span> </button> </a>
+          <a style="text-decoration: none; width: 100%; position: relative;" href="../de/click"> <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;"> SEITE BESUCHEN<i class="fa fa-arrow-right"></i><span class="discount-tooltip"> 70% Rabatt </span> </button> </a>
           <div class="best-label"><img src="style/limited-offer-smaller.png" alt="Best" /></div>
           </div>
           
@@ -928,7 +928,7 @@
         <p>Was die Nuubu Detox-Fußpflaster von der Konkurrenz abhebt, ist ihre kraftvolle, rein natürliche Formel, die in nur wenigen Tagen bemerkenswerte Ergebnisse liefert. Diese Fußpflaster wirken, während Sie schlafen, und absorbieren über Nacht Toxine und Verunreinigungen aus Ihrem Körper. Gefüllt mit natürlichen Inhaltsstoffen wie Bambusessig, Kräutern und Mineralien bieten die Nuubu Detox-Fußpflaster eine ganzheitliche Entgiftungslösung, die sowohl effektiv als auch sicher für alle Hauttypen ist.</p> 
         <p>Was uns während unserer Tests wirklich beeindruckt hat, war, wie schnell die Nuubu Detox-Fußpflaster das allgemeine Wohlbefinden verbesserten. Nach nur wenigen Nächten der Anwendung berichteten Benutzer von gesteigerten Energieniveaus, besserer Schlafqualität und einer spürbaren Reduzierung von Fußgeruch. Die Wirksamkeit der Pflaster beim Herausziehen von Toxinen ist unübertroffen und übertrifft alle anderen von uns getesteten Entgiftungspflaster.</p>
         <p>Ein weiteres herausragendes Merkmal ist die Benutzerfreundlichkeit. Einfach die Pflaster vor dem Schlafengehen auftragen, und sie wirken über Nacht. Am Morgen lassen sich die Pflaster leicht entfernen und hinterlassen ein erfrischtes und verjüngtes Gefühl an den Füßen. Im Gegensatz zu anderen Entgiftungsmethoden, die zeitaufwändige Regime erfordern, machen die Nuubu Detox-Fußpflaster die Entgiftung mühelos und bequem.</p>
-        <p><button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../audetox/click'">Besuchen Sie den offiziellen Nuubu-Shop und sichern Sie sich 70% Rabatt</button></p>
+        <p><button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../de/click'">Besuchen Sie den offiziellen Nuubu-Shop und sichern Sie sich 70% Rabatt</button></p>
         <h3>Ergebnisse:</h3>
         <br>
         <img src="style/nuubu-foot-patch4.jpg" alt="Nuubu Foot Patch">
@@ -956,7 +956,7 @@
             </ol>
         </div>
         <br>
-        <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../audetox/click'">Besuchen Sie den offiziellen Nuubu-Shop und sichern Sie sich 70% Rabatt</button> 
+        <button class="buy-button" style="box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.8); position: relative;" onclick="window.location.href='../de/click'">Besuchen Sie den offiziellen Nuubu-Shop und sichern Sie sich 70% Rabatt</button> 
     </div>
    
   <footer style="background-color: #303030; padding: 20px; text-align: center; margin-top: 40px;">
