--- a/index.html
+++ b/index.html
@@ -344,7 +344,8 @@
     }
     .content img {
         display: block;
-        margin: -20px auto;
+        margin: 0 auto;
+        max-width: 100%; /* 确保图片不溢出元素 */
         height: auto;
     }
     .customer-reviews {
@@ -497,7 +498,7 @@
                     </button>
                 </div>
                 <div class="modal-body" style="text-align: center;">
-                    <img src="style//Nuubu.jpg" alt="Nuubu" style="width:50%; margin-bottom: 15px;">
+                    <img src="style/Nuubu.jpg" alt="Nuubu" style="width:50%; margin-bottom: 15px;">
                     <p>Erhalten Sie heute 70% Rabatt!</p>
                     <p>Kaufen Sie jetzt Nuubu Detox Fußpflaster und erhalten Sie 70% Rabatt auf den Originalpreis.</p>
                 </div>
@@ -538,7 +539,7 @@
           <div class="ranking-number">#1</div>
           <!-- 产品图片 -->
           <div class="product-section">
-          <div class="product-image"><img src="style//Nuubu.jpg" alt="产品1" /></div>
+          <div class="product-image"><img src="style/Nuubu.jpg" alt="产品1" /></div>
           </div>
           <!-- 产品信息：标题和描述 -->
           <div class="product-section">
@@ -581,7 +582,7 @@
           <div class="product-item">
           <div class="ranking-number">#2</div>
           <div class="product-section">
-          <div class="product-image"><img src="style//purisaki.jpg" alt="产品2" /></div>
+          <div class="product-image"><img src="style/purisaki.jpg" alt="产品2" /></div>
           </div>
           <div class="product-section">
           <div class="product-info">
@@ -616,7 +617,7 @@
           <div class="product-item">
           <div class="ranking-number">#3</div>
           <div class="product-section">
-          <div class="product-image"><img src="style//kinoki.jpg" alt="产品3" /></div>
+          <div class="product-image"><img src="style/kinoki.jpg" alt="产品3" /></div>
           </div>
           <div class="product-section">
           <div class="product-info">
@@ -650,7 +651,7 @@
           <div class="product-item">
           <div class="ranking-number">#4</div>
           <div class="product-section">
-          <div class="product-image"><img src="style//dr.jpg" alt="产品4" /></div>
+          <div class="product-image"><img src="style/dr.jpg" alt="产品4" /></div>
           </div>
           <div class="product-section">
           <div class="product-info">
@@ -684,7 +685,7 @@
           <div class="product-item">
           <div class="ranking-number">#5</div>
           <div class="product-section">
-          <div class="product-image"><img src="style//Xitox.jpg" alt="产品5" /></div>
+          <div class="product-image"><img src="style/Xitox.jpg" alt="产品5" /></div>
           </div>
           <div class="product-section">
           <div class="product-info">
@@ -719,7 +720,7 @@
           <div class="product-section" style="display: none;"> </div>
           <!-- 产品图片 -->
           <div class="product-section">
-          <div class="product-image"><img src="style//Nuubu.jpg" alt="产品1" /></div>
+          <div class="product-image"><img src="style/Nuubu.jpg" alt="产品1" /></div>
           </div>
           <!-- 产品信息：标题和描述 -->
           <div class="product-section">
@@ -762,7 +763,7 @@
           <div class="ranking-number">#1</div>
           <h3>Nuubu Detox Fußpflaster</h3>
           <div class="mobile-image-rating">
-          <div class="product-image"><img src="style//Nuubu.jpg" alt="产品1" /></div>
+          <div class="product-image"><img src="style/Nuubu.jpg" alt="产品1" /></div>
           <div class="product-rating">
           <div class="stars">
               <i class="fa fa-star"></i>
@@ -795,7 +796,7 @@
           <div class="ranking-number">#2</div>
           <h3>purisaki Detox Fußpflaster</h3>
           <div class="mobile-image-rating">
-          <div class="product-image"><img src="style//purisaki.jpg" alt="产品2" /></div>
+          <div class="product-image"><img src="style/purisaki.jpg" alt="产品2" /></div>
           <div class="product-rating">
           <div class="stars">
               <i class="fa fa-star"></i>
@@ -824,7 +825,7 @@
           <div class="ranking-number">#3</div>
           <h3>Kinoki Detox Fußpflaster</h3>
           <div class="mobile-image-rating">
-          <div class="product-image"><img src="style//kinoki.jpg" alt="产品3" /></div>
+          <div class="product-image"><img src="style/kinoki.jpg" alt="产品3" /></div>
           <div class="product-rating">
           <div class="stars">
               <i class="fa fa-star"></i>
@@ -852,7 +853,7 @@
           <div class="ranking-number">#4</div>
           <h3>Dr. Entre's Fußpflaster</h3>
           <div class="mobile-image-rating">
-          <div class="product-image"><img src="style//dr.jpg" alt="产品4" /></div>
+          <div class="product-image"><img src="style/dr.jpg" alt="产品4" /></div>
           <div class="product-rating">
           <div class="stars">
               <i class="fa fa-star"></i>
@@ -880,7 +881,7 @@
           <div class="ranking-number">#5</div>
           <h3>Xitox Fußpflaster</h3>
           <div class="mobile-image-rating">
-          <div class="product-image"><img src="style//Xitox.jpg" alt="产品5" /></div>
+          <div class="product-image"><img src="style/Xitox.jpg" alt="产品5" /></div>
           <div class="product-rating">
           <div class="stars">
               <i class="fa fa-star"></i>
@@ -908,7 +909,7 @@
           <div class="product-item mobile-layout first-place">
           <h3>Nuubu Detox Fußpflaster</h3>
           <div class="mobile-image-rating">
-          <div class="product-image"><img src="style//Nuubu.jpg" alt="产品1" /></div>
+          <div class="product-image"><img src="style/Nuubu.jpg" alt="产品1" /></div>
           <div class="product-rating">
           <div class="stars">
               <i class="fa fa-star"></i>
