--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             font-size: 16px;
         }
         .content {
-            max-width: 1000px;
+            max-width: 1100px;
             margin: 0 auto;
             padding: 8px;
             font-family: Arial, sans-serif;
@@ -48,6 +48,10 @@
       display: flex;
       flex-direction: column;
       width: 100%;
+    }
+    .logo-container .center-logo {
+        max-width: 30% !important; /* 使用!important提高优先级，确保Logo的最大宽度不受.content img样式影响 */
+        height: auto;
     }
   
     .product-item {
@@ -473,10 +477,7 @@
         margin: 20px 0;
     }
 
-    .center-logo {
-        max-width: 30%; /* 进一步调整Logo的最大宽度 */
-        height: auto;
-    }
+   
 
     @media (max-width: 768px) {
         .center-logo {
