--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
       right: 2px;
     }
   
-    .best-label img {
-      height: 47px;
-      margin-top: -35px;
+    .product-item .best-label img {
+        height: 42px !important; /* 使用!important提高优先级，确保样式生效 */
+        margin-top: -25px;
     }
   
     .product-rating h1 {
@@ -312,7 +312,7 @@
         top: 10px;
         right: 2px;
       }
-      .best-label img {
+      .product-item .best-label img {
         height: 30px;
       }
       .product-best{
