--- a/lulutoxfr/click/index.html
+++ b/lulutoxfr/click/index.html
@@ -13,13 +13,13 @@
         const baseUrl = 'https://nmttrack.com/';
         const params = new URLSearchParams({
             a: '146518',
-            c: '407790',
+            c: '407791',
             co: '194328',
             mt: '5',
             s1: 'Google',
             s2: 'XHD',
             s3: 'AW-17028711680/YkwnCLnF-74aEICK9rc_',
-            s4: 'lulutoxde.vercel.app',
+            s4: 'de-h026.onrender.com',
             s5: trackingId || '0',
             utm_term: utmTerm
         });
