--- a/lulutoxfr/index.html
+++ b/lulutoxfr/index.html
@@ -472,6 +472,23 @@
             }
         });
     </script>
+    <!-- Default Statcounter code for topexcellentproduct
+https://topexcellentproduct.com -->
+<script type="text/javascript">
+var sc_project=13132201; 
+var sc_invisible=1; 
+var sc_security="ca2e9748"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/13132201/0/ca2e9748/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 
 </html>
