--- a/lulutoxfr/index.html
+++ b/lulutoxfr/index.html
@@ -161,7 +161,7 @@
                             <li>Disponible uniquement en ligne.</li>
                         </ul>
                     </div>
-                    <div class="cpr-cta-wrap"><a href="click/" target="_blank" class="cpr-product-cta w-button">Webseite besuchen &gt;&gt;</a></div>
+                    <div class="cpr-cta-wrap"><a href="../lulutoxfr/click/" target="_blank" class="cpr-product-cta w-button">Webseite besuchen &gt;&gt;</a></div>
                     <div class="cpr-mark">Schnappen Sie sich Ihren Tee jetzt 70% REDUZIERT!</div>
                 </div>
             </div>
@@ -388,7 +388,7 @@
                             <div><img src="https://cdn.prod.website-files.com/62ba9e4ca0110b09f8d0a851/67fa1c842fe86dcd46cd8d1e_7.jpeg" loading="lazy" alt="" /></div>
                         </figure>
                         <h3>C'est votre chance d'essayer le thé Lulutox</h3>
-                        <p>Profitez MAINTENANT d'une <strong>RÉDUCTION de 70%</strong>. Au moment de cette publication, vous pouvez <a href="click/"><strong>tester Lulutox à un prix défiant toute concurrence </strong></a>et <strong>contribuer sensiblement à votre bien-être</strong>.</p>
+                        <p>Profitez MAINTENANT d'une <strong>RÉDUCTION de 70%</strong>. Au moment de cette publication, vous pouvez <a href="../lulutoxfr/click/"><strong>tester Lulutox à un prix défiant toute concurrence </strong></a>et <strong>contribuer sensiblement à votre bien-être</strong>.</p>
                         <h3>Le secret de l'efficacité du thé détox Lulutox</h3>
                         <p>Ce n'est pas de la magie. <strong>Lulutox contient pas moins de 13 superaliments</strong>, que vous ne trouverez sous aucune autre forme <strong>abordable, délicieuse et facilement accessible</strong>.</p>
                         <ul role="list">
@@ -408,15 +408,15 @@
                         <p><strong>Q : Où puis-je acheter Lulutox ?</strong><br/>R : <strong>Uniquement sur le site officiel</strong> – évitez les contrefaçons sur Amazon ou eBay !</p>
                         <p><strong>Comment commander :</strong></p>
                         <ol start="1" role="list">
-                            <li><a href="click/"><strong>Visitez le site officiel de Lulutox &gt;&gt;</strong></a></li>
+                            <li><a href="../lulutoxfr/click/"><strong>Visitez le site officiel de Lulutox &gt;&gt;</strong></a></li>
                             <li>Choisissez un pack économique (cure de 3 mois recommandée).</li>
                             <li>Utilisez le code <strong>DETOX70</strong> pour 70% de réduction.</li>
                             <li>Paiement sécurisé par PayPal, carte de crédit ou Klarna.</li>
                         </ol>
                         <p>Le <strong>thé détox Lulutox</strong> n'est pas un thé ordinaire – c'est votre clé pour plus de bien-être, moins de stress et un ventre plus plat. Avec sa formule unique et la méga-réduction actuelle, c'est une évidence pour quiconque souhaite booster sa santé naturellement.</p>
-                        <p><a href="click/" target="_blank"><strong>👉 Économisez maintenant 70% avec Lulutox</strong></a></p>
+                        <p><a href="../lulutoxfr/click/" target="_blank"><strong>👉 Économisez maintenant 70% avec Lulutox</strong></a></p>
                     </div>
-                    <div class="cpr-cta-wrap"><a href="click/" target="_blank" class="cpr-product-cta w-button">Besuchen Lulutox offizielle Website &gt;&gt;</a></div>
+                    <div class="cpr-cta-wrap"><a href="../lulutoxfr/click/" target="_blank" class="cpr-product-cta w-button">Besuchen Lulutox offizielle Website &gt;&gt;</a></div>
                 </div>
                 <div class="w-col w-col-4">
                     <div class="summary-widget">
@@ -446,7 +446,7 @@
             <div class="bottom-bar-wrap w-row">
                 <div class="bottom-bar-column w-col w-col-7 w-col-medium-6 w-col-small-6 w-col-tiny-6">
                     <div class="best-label">BEST OVERALL</div><img loading="lazy" alt="" height="50" src="https://cdn.prod.website-files.com/62ba9e4ca0110b09f8d0a851/67d7bcc6abc01bc60bb33737_logo.png" /></div>
-                <div class="bottom-bar-column w-col w-col-5 w-col-medium-6 w-col-small-6 w-col-tiny-6"><a href="click/" target="_blank" class="cpr-product-cta w-button">Webseite besuchen</a></div>
+                <div class="bottom-bar-column w-col w-col-5 w-col-medium-6 w-col-small-6 w-col-tiny-6"><a href="../lulutoxfr/click/" target="_blank" class="cpr-product-cta w-button">Webseite besuchen</a></div>
             </div>
         </div>
     </div>
@@ -472,12 +472,13 @@
             }
         });
     </script>
-    <!-- Default Statcounter code for topexcellentproduct
-https://topexcellentproduct.com -->
+
+    <!-- Default Statcounter code for 消费者评分
+https://latestconsumerreviews.com/ -->
 <script type="text/javascript">
-var sc_project=13132201; 
+var sc_project=13113494; 
 var sc_invisible=1; 
-var sc_security="ca2e9748"; 
+var sc_security="b099a71a"; 
 </script>
 <script type="text/javascript"
 src="https://www.statcounter.com/counter/counter.js"
@@ -485,7 +486,7 @@ async></script>
 <noscript><div class="statcounter"><a title="Web Analytics"
 href="https://statcounter.com/" target="_blank"><img
 class="statcounter"
-src="https://c.statcounter.com/13132201/0/ca2e9748/1/"
+src="https://c.statcounter.com/13113494/0/b099a71a/1/"
 alt="Web Analytics"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
