--- a/lulutoxfr/index.html
+++ b/lulutoxfr/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-    <script src="style/utm.js" type="text/javascript"></script>
+    <script src="lulutoxfr/style/utm.js" type="text/javascript"></script>
     <script type="text/javascript">
         WebFont.load({
             google: {
@@ -28,15 +28,7 @@
     </script>
     <link href="https://cdn.prod.website-files.com/62ba7bb36e599d994496b429/62bc675d3ad92a223ad79049_review-small.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="https://cdn.prod.website-files.com/62ba7bb36e599d994496b429/62bc675f6dae299e5fbee3c5_review.ico" rel="apple-touch-icon" />
-    <!-- AnyTrack Tracking Code -->
-    <script>
-        ! function(e, t, n, s, a) {
-            (a = t.createElement(n)).async = !0, a.src = "https://assets.anytrack.io/E21pwfP3YcPX.js", (t = t.getElementsByTagName(n)[0]).parentNode.insertBefore(a, t), e[s] = e[s] || function() {
-                (e[s].q = e[s].q || []).push(arguments)
-            }
-        }(window, document, "script", "AnyTrack");
-    </script>
-    <!-- End AnyTrack Tracking Code -->
+   
     <style>
         .strike {
             position: relative;
