--- a/lulutoxfr/click/index.html
+++ b/lulutoxfr/click/index.html
@@ -19,7 +19,7 @@
             s1: 'Google',
             s2: 'XHD',
             s3: 'AW-17020148508/_DWoCJ3J7boaEJy267M_',
-            s4: 'de-h026.onrender.com',
+            s4: 'de-h026.onrender.com/lulutoxfr',
             s5: trackingId || '0',
             utm_term: utmTerm
         });
