--- a/lulutoxuk/index.html
+++ b/lulutoxuk/index.html
@@ -28,15 +28,13 @@
     </script>
     <link href="https://cdn.prod.website-files.com/62ba7bb36e599d994496b429/62bc675d3ad92a223ad79049_review-small.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="https://cdn.prod.website-files.com/62ba7bb36e599d994496b429/62bc675f6dae299e5fbee3c5_review.ico" rel="apple-touch-icon" />
-    <!-- AnyTrack Tracking Code -->
-    <script>
-        ! function(e, t, n, s, a) {
-            (a = t.createElement(n)).async = !0, a.src = "https://assets.anytrack.io/E21pwfP3YcPX.js", (t = t.getElementsByTagName(n)[0]).parentNode.insertBefore(a, t), e[s] = e[s] || function() {
-                (e[s].q = e[s].q || []).push(arguments)
-            }
-        }(window, document, "script", "AnyTrack");
-    </script>
-    <!-- End AnyTrack Tracking Code -->
+   <!--Optional, send client hints to get accurate device data-->
+<meta http-equiv="delegate-ch" content="sec-ch-ua https://kwkeau.mcgo2.com; sec-ch-ua-mobile https://kwkeau.mcgo2.com; sec-ch-ua-arch https://kwkeau.mcgo2.com; sec-ch-ua-model https://kwkeau.mcgo2.com; sec-ch-ua-platform https://kwkeau.mcgo2.com; sec-ch-ua-platform-version https://kwkeau.mcgo2.com; sec-ch-ua-bitness https://kwkeau.mcgo2.com; sec-ch-ua-full-version-list https://kwkeau.mcgo2.com; sec-ch-ua-full-version https://kwkeau.mcgo2.com" />
+
+<!-- MaxConv Tracking Script Base Code-->
+<script>!function(w,d,o,n,c){w[o]=w[o]||function(){(w[o].q=w[o].q||[]).push(arguments)};var s=d.createElement(n),t=d.getElementsByTagName(n)[0];s.async=!0;s.defer=!0;s.src="https://kwkeau.mcgo2.com/t/t.js";t.parentNode.insertBefore(s,t);}(window,document,"maxconv","script");</script>
+<noscript><link rel="stylesheet" href="https://kwkeau.mcgo2.com/t/t.css?mc_ns=1" /></noscript>
+<!-- End MaxConv Tracking Script Base Code-->
     <style>
         .strike {
             position: relative;
