--- a/lulutoxuk/index.html
+++ b/lulutoxuk/index.html
@@ -28,10 +28,7 @@
     </script>
     <link href="https://cdn.prod.website-files.com/62ba7bb36e599d994496b429/62bc675d3ad92a223ad79049_review-small.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="https://cdn.prod.website-files.com/62ba7bb36e599d994496b429/62bc675f6dae299e5fbee3c5_review.ico" rel="apple-touch-icon" />
-   <!--Optional, send client hints to get accurate device data-->
-<meta http-equiv="delegate-ch" content="sec-ch-ua https://kwkeau.mcgo2.com; sec-ch-ua-mobile https://kwkeau.mcgo2.com; sec-ch-ua-arch https://kwkeau.mcgo2.com; sec-ch-ua-model https://kwkeau.mcgo2.com; sec-ch-ua-platform https://kwkeau.mcgo2.com; sec-ch-ua-platform-version https://kwkeau.mcgo2.com; sec-ch-ua-bitness https://kwkeau.mcgo2.com; sec-ch-ua-full-version-list https://kwkeau.mcgo2.com; sec-ch-ua-full-version https://kwkeau.mcgo2.com" />
-
-<!-- MaxConv Tracking Script Base Code-->
+    <!-- MaxConv Tracking Script Base Code-->
 <script>!function(w,d,o,n,c){w[o]=w[o]||function(){(w[o].q=w[o].q||[]).push(arguments)};var s=d.createElement(n),t=d.getElementsByTagName(n)[0];s.async=!0;s.defer=!0;s.src="https://kwkeau.mcgo2.com/t/t.js";t.parentNode.insertBefore(s,t);}(window,document,"maxconv","script");</script>
 <noscript><link rel="stylesheet" href="https://kwkeau.mcgo2.com/t/t.css?mc_ns=1" /></noscript>
 <!-- End MaxConv Tracking Script Base Code-->
@@ -159,7 +156,7 @@
                             <li>Available only online.</li>
                         </ul>
                     </div>
-                    <div class="cpr-cta-wrap"><a href="https://kwkeau.mcgo2.com/click" target="_blank" class="cpr-product-cta w-button">Visit Website &gt;&gt;</a></div>
+                    <div class="cpr-cta-wrap"><a href="https://kwkeau.mcgo2.com/click" class="cpr-product-cta w-button">Visit Website &gt;&gt;</a></div>
                     <div class="cpr-mark">Grab your tea now 70% OFF!</div>
                 </div>
             </div>
@@ -412,9 +409,9 @@
                             <li>Secure payment via PayPal, credit card, or Klarna.</li>
                         </ol>
                         <p>The <strong>Lulutox detox tea</strong> is not an ordinary tea – it's your key to more well-being, less stress, and a flatter stomach. With its unique formula and the current mega-discount, it's a no-brainer for anyone looking to boost their health naturally.</p>
-                        <p><a href="https://kwkeau.mcgo2.com/click" target="_blank"><strong>👉 Save 70% now with Lulutox</strong></a></p>
+                        <p><a href="https://kwkeau.mcgo2.com/click"><strong>👉 Save 70% now with Lulutox</strong></a></p>
                     </div>
-                    <div class="cpr-cta-wrap"><a href="https://kwkeau.mcgo2.com/click" target="_blank" class="cpr-product-cta w-button">Visit Lulutox official website &gt;&gt;</a></div>
+                    <div class="cpr-cta-wrap"><a href="https://kwkeau.mcgo2.com/click" class="cpr-product-cta w-button">Visit Lulutox official website &gt;&gt;</a></div>
                 </div>
                 <div class="w-col w-col-4">
                     <div class="summary-widget">
@@ -444,7 +441,7 @@
             <div class="bottom-bar-wrap w-row">
                 <div class="bottom-bar-column w-col w-col-7 w-col-medium-6 w-col-small-6 w-col-tiny-6">
                     <div class="best-label">BEST OVERALL</div><img loading="lazy" alt="" height="50" src="https://cdn.prod.website-files.com/62ba9e4ca0110b09f8d0a851/67d7bcc6abc01bc60bb33737_logo.png" /></div>
-                <div class="bottom-bar-column w-col w-col-5 w-col-medium-6 w-col-small-6 w-col-tiny-6"><a href="https://kwkeau.mcgo2.com/click" target="_blank" class="cpr-product-cta w-button">Visit Website</a></div>
+                <div class="bottom-bar-column w-col w-col-5 w-col-medium-6 w-col-small-6 w-col-tiny-6"><a href="https://kwkeau.mcgo2.com/click" class="cpr-product-cta w-button">Visit Website</a></div>
             </div>
         </div>
     </div>
